# ponswarp-desktop

./: .env.example  .eslintrc.json  .gitignore  .vibe-config.json  ARCH_PATCH_PLAN_2025.md  CHANGELOG.md  COMPLETION_PLAN_v2.md  README.md  RELEASE.md  index.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tatus  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  auto-version.yml  ci.yml  release.yml
lib/ponscorewasm/: pons_core_wasm.d.ts  pons_core_wasm.js  pons_core_wasm_bg.js  pons_core_wasm_bg.wasm  pons_core_wasm_bg.wasm.d.ts
lib/wasm/: .gitignore  package.json  pons_core_wasm.d.ts  pons_core_wasm.js  pons_core_wasm_bg.wasm  pons_core_wasm_bg.wasm.d.ts
scripts/: release.js  sync-version.js
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bootstrap/: config.rs  dht.rs  mod.rs  relay.rs  service.rs  stats.rs
src-tauri/src/discovery/: mdns.rs  mod.rs  node_registry.rs
src-tauri/src/grid/: bitfield.rs  bootstrap_discovery.rs  dht.rs  hybrid_discovery.rs  mod.rs  peer.rs  piece_manager.rs  protocol.rs  scheduler.rs  swarm.rs
src-tauri/src/protocol/: commands.rs
src-tauri/src/quic/: client.rs  client_enhanced.rs  mod.rs  server.rs
src-tauri/src/relay/: engine.rs  mod.rs
src-tauri/src/transfer/: file_transfer.rs  mod.rs  multistream.rs  udp_core.rs  zero_copy_io.rs  zip_stream.rs
src-tauri/src/turn/: client.rs  config.rs  credentials.rs  ice.rs  ice_manager.rs  mod.rs  stun.rs  tests.rs
src-tauri/tests/: manual_validation_checklist.rs  turn_integration_test.rs
src/components/: ErrorBoundary.tsx  GridTransferDashboard.tsx  (+5 more)
(+51 files in other folders)
