[package]
name = "gridwarp"
version = "0.1.0"
description = "GridWarp Enterprise - High-speed P2P file transfer"
authors = ["GridWarp Team"]
license = "MIT"
repository = "https://github.com/gridwarp/gridwarp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gridwarp_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
zip = "0.6"
walkdir = "2"

quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

mdns-sd = "0.10"
stun = "0.5"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

bytes = "1"
anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4"] }

dashmap = "6"
flume = "0.11"

gethostname = "0.5"
num_cpus = "1.16"

futures = "0.3"
crc32fast = "1.4"
libc = "0.2"

# Zero-Copy I/O
memmap2 = "0.9"

# Grid Protocol (Phase 2)
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
# io-uring = "0.6"  # Linux 고성능 I/O (Phase 2에서 활성화)

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
